--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,6 @@ spring:
         password: 12345678
         driver-class-name: com.mysql.cj.jdbc.Driver
 
-
     jpa:
         hibernate:
             ddl-auto: update
@@ -15,3 +14,8 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.MySQLDialect
         show-sql: true
+        defer-datasource-initialization: true
+    sql:
+        init:
+            mode: always
+            data-locations: classpath*:data.sql
